# openssldemo

./: LICENSE.txt  README.md  build.gradle  openssl_cross_compilation.sh  package.sh  ssh.txt  test.bat  testa.sh
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: SM3.cpp  SM3.h  macro.h  native-lib.cpp  rsa_test.cpp  rsa_test.h
app/src/main/cpp/encrypt/: MyAes.cpp  MyAes.h  MyMd5.cpp  MyMd5.h  MyRsa.cpp  MyRsa.h
app/src/main/cpp/include/crypto/: asn1.h  bn.h  bn_conf.h  chacha.h  cryptlib.h  dso_conf.h  dso_conf.h.in
app/src/main/cpp/include/internal/: cryptlib.h
app/src/main/cpp/include/openssl/: asn1.h  bio.h  crypto.h  ct.h  ec.h  engine.h  evp.h  lhash.h  obj_mac.h  opensslconf.h  rand_drbg.h  safestack.h  ssl.h  ui.h  x509_vfy.h  x509v3.h
app/src/main/cpp/sm/: MySm2.cpp  MySm2.h  MySm3.cpp  MySm3.h  MySm4.cpp  MySm4.h
app/src/main/java/com/example/jin/ende_test/: HexTest.java  MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
